--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,11 @@
+# Spring Boot 애플리케이션 기본 설정 (Properties 형식)
+
+# 애플리케이션 이름
 spring.application.name=board
+
+# 활성화할 프로파일
+# - local: 로컬 개발 환경
+# - dev: 개발 서버 환경
+# - prod: 운영 서버 환경
+# 프로파일별로 다른 설정 파일을 사용 가능 (application-local.yml 등)
 spring.profiles.active=local
